# try-tries-and-trees

./: .gitignore  Cargo.toml  README.md
data/: one.csv  test.csv  two.csv
examples/: bitvectrie.rs  load_csv.rs  load_csv_radixtrie.rs  load_csv_treebitmap.rs  load_csv_treebitmap_univec.rs  load_csv_trie.rs  numbers_radixtrie.rs  numbers_treebitmap.rs  numbers_treebitmap_univec.rs  numbers_trie.rs  radixtrie.rs  simpletrie.rs  treebitmap.rs  treebitmap_univec.rs  trie.rs  trie4.rs  trie6.rs  triewithpointers.rs
src/: lib.rs  main.rs
src/common/: mod.rs
src/radixtrie/: mod.rs
src/simpletrie/: mod.rs
src/tests/: csv_test_radixtrie.rs  csv_test_treebitmap.rs  csv_test_treebitmap_univec.rs  csv_test_trie.rs  mod.rs  radix.rs  treebitmap.rs  treebitmap_univec.rs
src/treebitmap/: mod.rs
src/treebitmap_univec/: mod.rs
src/trie/: mod.rs
src/triebitvec/: mod.rs
