[package]
name = "trie"
version = "0.1.0"
authors = ["Jasper den Hertog <jasper@plainspace.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "^0.20"
num = "^0.3"
csv = "^1.1"
shrust = "0.0.7"
ansi_term = "0.12.1"
smallvec = "1.6.1"